<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_24"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:title="@string/search" />

        <item
        android:id="@+id/menu_hamburger"
        android:icon="@drawable/ic_baseline_menu_24"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/menu_hamburger">
        <menu>
            <item
            android:id="@+id/sign_out"
            android:orderInCategory="100"
            app:showAsAction="ifRoom"
            android:title="@string/sign_out"
            />
        </menu>
        </item>

</menu>