<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/card_view">

    <fragment
        android:id="@+id/card_view"
        android:name="com.safia.go4lunch.controller.fragment.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/list_view"
        android:name="com.safia.go4lunch.controller.fragment.listview.ListViewFragment"
        android:label="@string/title_listview"
        tools:layout="@layout/list_view" />

    <fragment
        android:id="@+id/workmates"
        android:name="com.safia.go4lunch.controller.fragment.workmates.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/workmates" />
</navigation>