<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.activity.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/restaurant_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/restaurant_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/restaurant_image"
                android:backgroundTint="#FF6E40">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/restaurant_name_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        tools:text="Le Paradis du fruit " />

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/rating_detail"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"

                        android:layout_toEndOf="@id/restaurant_name_details"
                        app:tint="#FFD53B"
                        tools:numStars="3" />

                    <TextView
                        android:id="@+id/restaurant_type_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/restaurant_name_details"
                        android:maxLines="1"
                        android:layout_marginEnd="1dp"
                        android:textColor="@color/white"
                        tools:text="fruit" />
                    <TextView
                        android:id="@+id/tiret"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/restaurant_name_details"
                        android:layout_toEndOf="@+id/restaurant_type_detail"
                        android:maxLines="1"
                        tools:text=" - "
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/restaurant_adress_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/restaurant_name_details"
                        android:layout_toEndOf="@+id/tiret"
                        android:maxLines="1"
                        android:layout_marginStart="1dp"
                        android:textColor="@color/white"
                        tools:text="3 Place de la Bastille" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

           <androidx.cardview.widget.CardView
                android:id="@+id/restaurant_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/restaurant_info">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="50dp">

                    <RelativeLayout
                        android:id="@+id/call_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="start">

                        <ImageButton
                            android:id="@+id/phone_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@id/phone_name"
                            android:background="@color/fui_transparent"
                            android:src="@drawable/ic_baseline_call_24" />

                        <TextView
                            android:id="@+id/phone_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/call"
                            android:textColor="#D65637"
                            android:layout_below="@id/phone_button"
                            android:layout_marginTop="15dp"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/like_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <ImageButton
                            android:id="@+id/like_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/like_name"
                            android:layout_alignEnd="@id/like_name"
                            android:background="@color/fui_transparent"
                            android:src="@drawable/ic_baseline_star_border_24" />

                        <TextView
                            android:id="@+id/like_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/like_button"
                            android:layout_marginTop="15dp"
                            android:text="@string/like"
                            android:textColor="#D65637" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end">

                        <ImageButton
                            android:id="@+id/website_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/fui_transparent"
                            android:src="@drawable/ic_baseline_web_24"
                            android:layout_alignEnd="@id/website_name"
                            android:layout_alignStart="@id/website_name"
                            />

                        <TextView
                            android:id="@+id/website_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/website"
                            android:textColor="#D65637"
                            android:layout_below="@id/website_button"
                            android:layout_marginTop="15dp"/>

                    </RelativeLayout>

                </FrameLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_userList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".controller.fragment.listview.ListViewFragment"
            tools:listitem="@layout/recyclerview_user_list">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>